src/objects/Order_Line__c.object
<CustomObject>
    <description>Holds order lines data from Oracle</description>
    <fields>
        <fullName>APC__c</fullName>
        <formula>Product__r.APC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>APC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountId__c</fullName>
        <formula>Order__r.Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Order__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill To Address</label>
        <referenceTo>Bill_To_Ship_To__c</referenceTo>
        <relationshipLabel>Order Lines (Bill To Address)</relationshipLabel>
        <relationshipName>Order_Line1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cancelled_Quantity__c</fullName>
        <inlineHelpText>The quantity of item cancelled on a line.</inlineHelpText>
        <label>Cancelled Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Carrier__c</fullName>
        <label>Carrier</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commercial_Invoice__c</fullName>
        <label>Commercial Invoice #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <description>Pointer to oracle customer number</description>
        <formula>Order__r.Account__r.Oracle_Customer_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_PO_Line_Number__c</fullName>
        <label>Customer PO Line Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Requested_Ship_Date__c</fullName>
        <description>Customer Requested Ship Date</description>
        <inlineHelpText>Customer Requested Ship Date.</inlineHelpText>
        <label>Customer Requested Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DP_Segment__c</fullName>
        <formula>Product__r.DP_Segment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DP Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extended_Price__c</fullName>
        <formula>(Ordered_Quantity__c -  Cancelled_Quantity__c ) *  Selling_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Selling Price x the quantity  = Extended Price</inlineHelpText>
        <label>Extended Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>The Oracle System Line ID.  Oracle system generated.</inlineHelpText>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FOB__c</fullName>
        <label>FOB</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fulfilled_Quantity__c</fullName>
        <inlineHelpText>Quantity fulfilled or shipped for the item.</inlineHelpText>
        <label>Fulfilled Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Set__c</fullName>
        <label>Fulfillment Set</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gap_to_Prom_SchShip__c</fullName>
        <description>Calculation: Promise Date - Scheduled Ship Date Definition:( How am I controlling my own process? Gap)</description>
        <formula>Promise_Ship_date__c - Scheduled_Ship_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculation: Promise Date - Scheduled Ship Date Definition:( How am I controlling my own process? Gap)</inlineHelpText>
        <label>Gap to Prom-SchShip</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gap_to_Req_Prom__c</fullName>
        <description>Calculation: Requested Date - Promise Date Definition:(Initial Communication to Customer Expectations - Gap)</description>
        <formula>Customer_Requested_Ship_Date__c - Promise_Ship_date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculation: Requested Date - Promise Date Definition:(Initial Communication to Customer Expectations - Gap)</inlineHelpText>
        <label>Gap to Req-Prom</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gap_to_Req_SchShip__c</fullName>
        <description>Calculation: Requested Date - Scheduled Ship Date Definition:(How am I doing to Customer Requested Ship Date? Gap)</description>
        <formula>Customer_Requested_Ship_Date__c - Scheduled_Ship_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculation: Requested Date - Scheduled Ship Date Definition:(How am I doing to Customer Requested Ship Date? Gap)</inlineHelpText>
        <label>Gap to Req-SchShip</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Has_Line_Holds__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If the line has a hold at the line level.  Example:  OM hold, Price Hold, AR hold.  etc.</inlineHelpText>
        <label>Has Line Holds?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <inlineHelpText>The date the line is invoiced.  Typically the same as shipped date. There is no ship date if the line is a SERVICE.</inlineHelpText>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <inlineHelpText>The number generated by the Oracle system for invoice tracking online.</inlineHelpText>
        <label>Invoice Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Number__c</fullName>
        <description>Line number starting at 1</description>
        <inlineHelpText>The line associated to the item being ordered.</inlineHelpText>
        <label>Line Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Status__c</fullName>
        <inlineHelpText>Status for the line only.  Not the Order status.</inlineHelpText>
        <label>Line Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Type_Name__c</fullName>
        <inlineHelpText>Shows the intention of the Line and it&apos;s Transaction Type. - No further information known.  (examples:  Standard Order, Invoice Only, Invoice with Inventory(Consignment), Return with Credit, etc.)</inlineHelpText>
        <label>Line Transaction Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Type__c</fullName>
        <inlineHelpText>Shows the intention of the line.  Displays the Line Type Category from Oracle.   
Credit Memo Line for Return Category, Invoice Only Line for an Order Category, Standard line for an Order Category as examples.</inlineHelpText>
        <label>Line Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <description>Unit price defined in the selected price list</description>
        <inlineHelpText>This is the Associated list price for this particular line for ALL Customers.  Normally in the &quot;00 LIST&quot; price book.</inlineHelpText>
        <label>List Price</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Open_Amount__c</fullName>
        <formula>Open_Quantity__c  *  Selling_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Open_Quantity__c</fullName>
        <formula>Ordered_Quantity__c  -  Fulfilled_Quantity__c  -  Cancelled_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>Order Number.</description>
        <inlineHelpText>The number assigned by the Oracle system for the order entered under a customer PO.</inlineHelpText>
        <label>Order Number</label>
        <referenceTo>Order_Header__c</referenceTo>
        <relationshipLabel>Order Lines</relationshipLabel>
        <relationshipName>Parent_Order</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Ordered_Item__c</fullName>
        <inlineHelpText>Customer Part Number</inlineHelpText>
        <label>Ordered Item</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ordered_Quantity__c</fullName>
        <description>The quantity ordered by the customer</description>
        <inlineHelpText>Quantity of line being ordered.</inlineHelpText>
        <label>Ordered Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Date__c</fullName>
        <formula>Order__r.PO_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <formula>Order__r.PO_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PO Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Packing_Slip_Number__c</fullName>
        <inlineHelpText>The shipping document number assigned by the warehouse when the product is picked for shipment.</inlineHelpText>
        <label>Packing Slip Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pick_Release_Date__c</fullName>
        <label>Pick Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Picked_Quantity__c</fullName>
        <label>Picked Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planning_Priority__c</fullName>
        <label>Oracle Planning Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <formula>Product__r.Description</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Order Lines</relationshipLabel>
        <relationshipName>Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prom_OrderEnter__c</fullName>
        <description>Calculation: Promise Date -Order Entered Date Definition:(Communicated Lead Time at Order Line Level)</description>
        <formula>Promise_Ship_date__c - Order__r.Order_Entered_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculation: Promise Date -Order Entered Date Definition:(Communicated Lead Time at Order Line Level)</inlineHelpText>
        <label>Prom-OrderEnter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Promise_Ship_date__c</fullName>
        <inlineHelpText>The first scheduled ship date Motorola expects to ship the line for the customer.</inlineHelpText>
        <label>Promise date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Remote_Ship_To_Site_UseId__c</fullName>
        <description>Remote Ship To Site UseId</description>
        <inlineHelpText>Remote Ship To Site UseId</inlineHelpText>
        <label>Remote Ship To Site UseId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Req_OrderEnter__c</fullName>
        <description>Calculation:Requested Date - Order Entered Date Definition:(Market Order Lead Time)</description>
        <formula>Customer_Requested_Ship_Date__c - Order__r.Order_Entered_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculation:Requested Date - Order Entered Date Definition:(Market Order Lead Time)</inlineHelpText>
        <label>Req-OrderEnter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Requested_Flag__c</fullName>
        <description>Requested date greater than Scheduled Ship Date</description>
        <formula>IF((Customer_Requested_Ship_Date__c - Scheduled_Ship_Date__c) &gt;0,&quot;True&quot;,&quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requested Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reserved_Quantity__c</fullName>
        <inlineHelpText>Partially picked quantity</inlineHelpText>
        <label>Reserved Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Return_Reason_Code__c</fullName>
        <label>Return Reason Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revised_Ship_Date__c</fullName>
        <label>Revised Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Scheduled_Ship_Date__c</fullName>
        <inlineHelpText>The expected date the line is to be shipped.  Could be lead time for that particular line.</inlineHelpText>
        <label>Scheduled Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Selling_Price__c</fullName>
        <inlineHelpText>It is the selling price for this line associated to this particular customer.</inlineHelpText>
        <label>Selling Price</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ship_Set__c</fullName>
        <label>Ship Set</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Line level ship to address. This field will be populated if a particular order line is shipped to a different location than order header&apos;s ship to location.</description>
        <inlineHelpText>Where the line is being shipped.  The Oracle abbreviation for the the ship-to-address.</inlineHelpText>
        <label>Ship To Address</label>
        <referenceTo>Bill_To_Ship_To__c</referenceTo>
        <relationshipLabel>Order Lines</relationshipLabel>
        <relationshipName>Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_Via__c</fullName>
        <description>Shipped via company name such as DHL, etc.</description>
        <inlineHelpText>How the line is shipped.  (example:  AIR, Surface, etc.)</inlineHelpText>
        <label>Shipping method</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipped_Amount__c</fullName>
        <formula>Fulfilled_Quantity__c   *  Selling_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Shipped amount is the total shipped line amount.  It is =  Line Fulfilled Quantity x Selling Price plus TAX. (If any)</inlineHelpText>
        <label>Shipped Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shipped_Completely__c</fullName>
        <formula>IF( Shipped_Quantity__c == Ordered_Quantity__c , &apos;Yes&apos;, &apos;No&apos;)</formula>
        <label>Shipped Completely?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipped_Date__c</fullName>
        <inlineHelpText>The date the line is shipped.  Typically the same as Invoice date.  There is no ship date if the line is a SERVICE.</inlineHelpText>
        <label>Shipped Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shipped_Quantity__c</fullName>
        <inlineHelpText>The quantity of units shipped for that line.</inlineHelpText>
        <label>Shipped Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shipping_Instructions__c</fullName>
        <label>Shipping Instructions</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Shipping_Status__c</fullName>
        <label>Shipping Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tracking_Number__c</fullName>
        <inlineHelpText>The number assigned to the line generated by the shipper for shipping tracking purposes.  Customers us this to track their packages.</inlineHelpText>
        <label>Tracking Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fulfillment_center__c</fullName>
        <inlineHelpText>The shipping warehouse for the Line.  (At line level.)</inlineHelpText>
        <label>Warehouse</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Order Line</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Ordered_Quantity__c</columns>
        <columns>Cancelled_Quantity__c</columns>
        <columns>Fulfilled_Quantity__c</columns>
        <columns>Customer_Requested_Ship_Date__c</columns>
        <columns>List_Price__c</columns>
        <columns>Extended_Price__c</columns>
        <columns>fulfillment_center__c</columns>
        <columns>Invoice_Number__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Shipped_Quantity__c</columns>
        <columns>Shipped_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Order Line</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>